<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.tairone.calculadora.MainActivity"
    android:orientation="horizontal"
    android:weightSum="1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:baselineAligned="false"
        android:weightSum="1"
        android:id="@+id/linearLayout"
        android:layout_alignParentEnd="false">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/txcalcs"
                android:editable="false"
                android:layout_weight="6" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/txm"
                android:editable="false"
                android:layout_weight="1" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/txres"
            android:textSize="50dp"
            android:textAlignment="textEnd"
            android:editable="false" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:nestedScrollingEnabled="true"
        android:layout_below="@+id/linearLayout"
        android:id="@+id/linearLayout2">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/LIMPAR"
                android:id="@+id/btclear" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/APAGAR"
                android:id="@+id/btapaga" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/SAIR"
                android:id="@+id/btsair" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/M"
                android:id="@+id/btmen" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btraiz"
                android:id="@+id/btraiz" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btraizcub"
                android:id="@+id/btraizbub" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btporcen"
                android:id="@+id/btporcen" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btsoma"
                android:id="@+id/btsoma" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btsete"
                android:id="@+id/btsete" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btoito"
                android:id="@+id/btoito" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btnove"
                android:id="@+id/btnove" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btsub"
                android:id="@+id/btsub" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btquatro"
                android:id="@+id/btquatro" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btcinco"
                android:id="@+id/btcinco" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btseis"
                android:id="@+id/btseis" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btmult"
                android:id="@+id/btmult" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btum"
                android:id="@+id/btum" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btdois"
                android:id="@+id/btdois" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bttres"
                android:id="@+id/bttres" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btdiv"
                android:id="@+id/btdiv" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/btnada" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btzero"
                android:id="@+id/btzero" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btponto"
                android:id="@+id/btponto" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btigual"
                android:id="@+id/btigual" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
